# clinical-ops-copilot

./: .cursorrules  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  VOICE_DEMO.md  fly.toml  pyproject.toml  voice_demo.py
.github/workflows/: ci.yml
agent/: README.md  __init__.py  __main__.py  approval_policy.py  approval_store.py  audit.py  config.py  decision_guardrail.py  executor.py  fhir_facts.py  fhir_mcp.py  fhir_resilience.py  gate.py  held_out.py  injection_guard.py  llm.py  mcp_host.py  run_log.py  runner.py  workflow.py
browser_agent/: __init__.py  agent.py  demo.py
browser_agent/portal/: __init__.py  app.py  cases.json
data/_review/: candidates.json
data/cases/: case-001.json  case-002.json  case-003.json  case-004.json  case-005.json  case-006.json  case-007.json  case-008.json  case-009.json  case-010.json  case-011.json  case-012.json  case-013.json  case-014.json  case-015.json  case-016.json  case-017.json  case-018.json  case-019.json  case-020.json  case-021.json  case-022.json  case-023.json  case-024.json  case-025.json  case-026.json  case-027.json  case-028.json  case-029.json  case-030.json  case-031.json  case-032.json  case-033.json  case-034.json  case-035.json  case-036.json  case-037.json  case-038.json  case-039.json  case-040.json  (+8 more)
data/charts/: README.md  case-001-note.txt
data/labels/: labels.json
docs/: README.md  demo_script.md  deploy_fly.md  fhir_demo_script.md  fhir_teardown.md  labeling_rubric.md  loadtest.md  ocr-browser-README-draft.md  safety.md  teardown.md  transport_tradeoff.md  workflow_spec.md
edi/: README.md  __init__.py  decision_map.py  denial_triage.py  encoder.py  errors.py  eval_agreement.py  eval_triage.py  generator.py  parser.py  tokenizer.py  x12_835.py
edi/fixtures/: denyrisk_migraine_case044.278  denyrisk_ra_case012.278  malformed_missing_um.278  malformed_truncated_isa.278  malformed_wrong_delimiters.278  requestinfo_migraine_case039.278  requestinfo_ra_case007.278  requestinfo_t2d_case026.278  submit_migraine_case037.278  submit_ra_case001.278  submit_ra_case001_with_patient_id.278  submit_t2d_case017.278
edi/fixtures/x835/: batch_mixed.835  denied_auth_absent.835  denied_cob_elig.835  denied_multi_reason.835  golden.json  malformed_missing_clp.835  malformed_truncated_isa.835  malformed_wrong_delimiters.835  (+2 more)
evals/: README.md  __init__.py  __main__.py  aggregate.py  dataset.py  human_email_ratings.json  human_ratings.py  judge.py  models.py  regression.py  report.py  runner.py  splits.py
evals/docs/: trajectory_rubric.md
evals/fhir/: LABEL_REVIEW.md  build_eval_set.py  dataset.py  label_derivation.py  labels.json  manifest.json  runner.py
evals/fixtures/: judge_scores.json
evals/metrics/: __init__.py  classification.py  errors.py  judge_agreement.py  latency.py  trajectory.py
evals/regression/: threshold.json
evals/results/: dev.json  dev_summary.md  fhir.json  fhir_guardrail_comparison.md  fhir_summary.md  latest.json  latest_summary.md  locked_test.json  locked_test_summary.md  tuning_comparison.md
evals/splits/: dev.json  locked_test.json
fhir/: README.md  application.yaml  docker-compose.fhir.yml
fhir_client/: __init__.py  bundle.py  client.py  config.py  errors.py  models.py
fhir_loader/: __init__.py  load_synthea.py
hl7v2/: README.md  __init__.py  errors.py  eval.py  mapper.py  parser.py
hl7v2/fixtures/: adt_a01_admit_basic.hl7  adt_a01_admit_repeat_ids.hl7  malformed_missing_msh.hl7  malformed_truncated_msh.hl7  malformed_unsupported_type.hl7  oru_r01_a1c_bmi.hl7  oru_r01_escaped.hl7  oru_r01_metabolic_panel.hl7  oru_r01_mixed_types.hl7
load/: README.md  __init__.py  harness_app.py  microbench.py  run_load.sh
load/k6/: baseline.js  fhir_sweep.js  ramp.js
load/results/: microbench.txt  pytest_transcript.txt
ocr/: __init__.py  eval_ocr.py  generate_fixtures.py  reader.py
ocr/fixtures/: ground_truth.json
phoenix_obs/: README.md  __init__.py  eval_driver.py  setup.py  tracing.py
schemas/: README.md  __init__.py  actions.py  approval.py  cases.py  dataset_io.py  decisions.py  extraction.py  extraction_result.py  fhir_redaction.py  loader.py  phi_redaction.py  policies.py  run_metrics.py  seed_data.py
scripts/: dataset_stats.py  generate_cases.py  review_labels.py
servers/clinic_ops/: README.md  __init__.py  __main__.py  actions.py  config.py  errors.py  idempotency.py  mock_backend.py  reliability.py  schemas.py  server.py  tool_errors.py
servers/clinical_data/: README.md  __main__.py  config.py  extractor.py  http_app.py  http_auth.py  http_metrics.py  http_metrics_middleware.py  oncology_client.py  oncology_schema.py  path_security.py  patient_service.py  patients.py  policy_service.py  server.py  version.py
tests/: README.md  test_agent_fhir_network.py  test_agent_held_out.py  test_agent_wiring.py  test_approval_gate.py  test_approval_policy.py  test_browser_agent.py  test_clinic_ops_mcp.py  test_clinic_ops_reliability.py  test_clinical_data_fhir_mcp.py  test_clinical_data_http.py  test_clinical_data_mcp.py  test_clinical_data_patient_service.py  test_dataset.py  test_decision_guardrail.py  test_denial_triage.py  test_eval_fhir.py  test_eval_fhir_label_derivation.py  test_eval_metrics.py  test_eval_regression.py  test_eval_splits.py  test_extractor.py  test_fhir_client.py  test_fhir_client_network.py  test_fhir_facts.py  test_fhir_fallback.py  test_fhir_fusion.py  test_fhir_phi_redaction.py  test_fhir_redaction.py  test_hl7v2_goldens.py  test_hl7v2_malformed.py  test_hl7v2_mapper.py  test_hl7v2_no_company_names.py  test_hl7v2_parser.py  test_injection_guard.py  test_load_synthea.py  test_loader.py  test_ocr_generate.py  test_ocr_parser.py  test_ocr_pipeline.py  (+24 more)
tests/fixtures/: fhir_patient_78748.json
ui/: README.md  __init__.py  __main__.py  app.py  deps.py
ui/templates/: base.html  detail.html  queue.html
voice/: __init__.py  route.py  speak.py  transcribe.py
voice_telephony/: README.md  RUNBOOK.md  __init__.py  agent_bridge.py  app.py  asgi.py  config.py  signature.py
(+85 files in other folders)
